syntax = "proto3";

package wow_export;

option csharp_namespace = "wow_export";

message HandshakeRequest {
    string client_version = 1;
    string process_name = 2;
}

message HandshakeResponse {
    string core_version = 1;
}

message RegionListRequest {
}

message RegionListResponse {
    repeated CDNRegionProto regions = 1;
}

message CDNRegionProto {
    string id = 1;
    string display_name = 2;
    string patch_host_template = 3;
    string ribbit_host_template = 4;
}

message UpdateApplicationRequest {
}

message UpdateApplicationResponse {
}

message UpdateApplicationStats {
    uint32 total_files = 1;
    uint64 total_size = 2;
}

message UpdateApplicationProgress {
    uint32 file_number = 1;
    string file_name = 2;
    uint64 file_size = 3;
}

message IpcMessage {
    oneof message_type {
        HandshakeRequest handshake_request = 1;
        HandshakeResponse handshake_response = 2;
        RegionListRequest region_list_request = 3;
        RegionListResponse region_list_response = 4;
        UpdateApplicationRequest update_application_request = 5;
        UpdateApplicationResponse update_application_response = 6;
        UpdateApplicationStats update_application_stats = 7;
        UpdateApplicationProgress update_application_progress = 8;
    }
}